.k8s/monitoring/k8s/gateway-api.service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-api-service
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '8000'
    prometheus.io/scheme: 'http'
spec:
  type: ExternalName
  externalName: gateway-api-service.media-lake.svc.cluster.local
  ports:
  - name: metrics
    port: 8000
    protocol: TCP
    targetPort: 8000
