.k8s/monitoring/k8s/grafana.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
spec:
  rules:
    - http:
        paths:
          - path: / #accessed by /metrics
            pathType: Prefix
            backend:
              service:
                name: gateway-api-service
                port:
                  number: 8000
